Improve footer & about page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,9 +11,7 @@
          content to avoid any CSS collisions with our real content. -->
     <div class="wrap">
       {% include header.html %}
-      <div class="container content">
-        {{ content }}
-      </div>
+      {{ content }}
     </div>
 
     <label for="sidebar-checkbox" class="sidebar-toggle"></label>
@@ -35,5 +33,6 @@
         }, false);
       })(document);
     </script>
+    {% include footer.html %}
   </body>
 </html>
