--- a/css/rw.css
+++ b/css/rw.css
@@ -1,19 +1,307 @@
+.grid {
+  padding: 0 0 30px 0; }
+  .grid:after {
+    /* Or @extend clearfix */
+    content: "";
+    display: table;
+    clear: both; }
+
+[class*='col-'] {
+  float: left;
+  padding: 0 10px; }
+
+.col-2-3 {
+  width: 66.66%; }
+
+.col-1-3 {
+  width: 33.33%; }
+
+.col-1-2 {
+  width: 50%; }
+
+.col-1-4 {
+  width: 25%; }
+
+.col-1-8 {
+  width: 12.5%; }
+
+@media only screen and (max-width: 953px) {
+  [class*='col-'] {
+    width: 100%;
+    padding: 0; } }
+
+/* Opt-in outside padding */
+.grid-pad {
+  padding: 30px 0 30px 30px; }
+  .grid-pad [class*='col-']:last-of-type {
+    padding-right: 30px; }
+
+@media only screen and (min-width: 954px) {
+  .wide {
+    width: 960px;
+    margin: 30px 0;
+    max-width: 960px;
+    margin-left: -120px; } }
+.footer {
+  border-top: 1px solid #eee;
+  float: left;
+  width: 100%; }
+
+.footer-list, .footer-list li {
+  list-style-type: none;
+  margin: 0;
+  padding: 0; }
+  .footer-list a, .footer-list li a {
+    border: none; }
+
+.footer-container {
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 40px;
+  clear: both; }
+
+.col-networks,
+.col-play {
+  float: right; }
+
+/*=============================== Homepage  ================================*/
+.about-header {
+  background: #314414 url(/img/about-header-sm.jpg) no-repeat center 0px;
+  height: 480px; }
+  @media only screen and (min-width: 450px) {
+    .about-header {
+      background: #314414 url(/img/about-header-md.jpg) no-repeat center 0px;
+      height: 480px; } }
+  @media only screen and (min-width: 769px) {
+    .about-header {
+      background: #314414 url(/img/about-header.jpg) no-repeat center 0px;
+      height: 480px; } }
+  @media only screen and (min-width: 1200px) {
+    .about-header {
+      background: #314414 url(/img/about-header-xl.jpg) no-repeat center 0px;
+      height: 530px; } }
+
+.hello-wrap {
+  float: left;
+  width: 100%; }
+
+.hello-bubble {
+  display: block;
+  text-indent: -9000em;
+  display: block;
+  width: 400px;
+  clear: both;
+  margin: 80px auto 0; }
+
+.header-top {
+  position: relative;
+  z-index: 40; }
+
+.lower-strip {
+  position: relative;
+  z-index: 10;
+  padding: 0 50px; }
+
+.about-wrap {
+  max-width: 800px;
+  margin: 0 auto; }
+
+.about-intro {
+  text-align: center;
+  font-weight: 300;
+  color: #333;
+  font-size: 40px;
+  line-height: 1.2;
+  margin: 90px 0; }
+
+.listy {
+  color: #333; }
+
+.listy li {
+  clear: both;
+  line-height: 1.4;
+  margin-bottom: 40px;
+  float: left;
+  list-style-type: none; }
+
+.listy-big {
+  margin-top: 40px;
+  font-size: 26px;
+  font-weight: 300; }
+
+.listy a {
+  color: #333;
+  text-decoration: none;
+  font-weight: 500; }
+
+.listy-left {
+  float: left;
+  width: 20%; }
+
+.listy-right {
+  width: 75%;
+  float: right; }
+
+.listy-right a {
+  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3); }
+
+.some-other-links {
+  text-align: center; }
+
+.listy-small {
+  clear: both;
+  margin: 80px 0;
+  text-align: center; }
+
+.listy-small li {
+  margin: 0 0 50px;
+  width: 100%; }
+
+.listy-small strong {
+  float: left;
+  width: 100%; }
+
+.strip-other-links {
+  float: left;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.2); }
+
+.strip-title {
+  color: #fff;
+  font-size: 18px;
+  text-align: center; }
+
+.strip-title-networks {
+  color: #333; }
+
+.strip {
+  padding: 20px 0; }
+
+.strip-2 {
+  background: #333;
+  padding: 30px 0; }
+
+.strip-1 .well {
+  color: #333;
+  min-height: 160px; }
+
+.strip-3 {
+  padding: 0; }
+
+.strip-4 {
+  padding: 0; }
+
+a.next-link {
+  text-align: center;
+  width: 100%;
+  font-size: 18px;
+  line-height: 2;
+  display: block; }
+
+.elsewhere-links, .elsewhere-links li {
+  list-style-type: none;
+  margin: 0; }
+
+.elsewhere-links li {
+  width: 14.2%;
+  float: left; }
+
+.elsewhere-links a {
+  color: #999;
+  display: block;
+  text-align: center; }
+
+.elsewhere-links a:hover {
+  text-decoration: none;
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1); }
+
+.elsewhere-links i {
+  font-size: 40px;
+  line-height: 20px;
+  height: 30px;
+  width: 100%;
+  display: block;
+  color: #78A82B;
+  margin: 0 0 8px; }
+
+.elsewhere-links-home {
+  clear: both;
+  float: left;
+  width: 100%;
+  margin: 70px 0; }
+
+.elsewhere-links-home i {
+  color: #78A82B; }
+
+.elsewhere-links span {
+  text-align: center;
+  display: block;
+  font-size: 12px;
+  line-height: 1;
+  font-weight: bold; }
+
+.elsewhere-links-home span {
+  display: none; }
+
+/* Give image in a link a border radius and light opacity on hover */
+.img-wrap img {
+  border-radius: 3px;
+  width: 100%; }
+
+.img-wrap:hover img {
+  opacity: 0.8; }
+
+#myCarousel {
+  margin-top: 40px; }
+
+.featured-work-title {
+  position: absolute;
+  z-index: 100;
+  text-align: center;
+  width: 100%;
+  height: 40px;
+  margin: -40px 0 0;
+  font-size: 20px;
+  padding: 10px 0;
+  background: #00c0eb;
+  color: #fff; }
+
 .read-more-link {
   font-weight: bold; }
+
+.related-strip {
+  background: #f5f5f5;
+  float: left;
+  width: 100%;
+  padding: 30px; }
+  .related-strip h2 {
+    text-align: center;
+    margin-bottom: 30px; }
+  .related-strip .col-related {
+    margin-bottom: 30px; }
+  .related-strip [class*='col-'] {
+    padding: 0 20px; }
+  @media only screen and (min-width: 1200px) {
+    .related-strip .grid {
+      max-width: 1200px;
+      float: none;
+      margin: 0 auto; } }
 
 a {
   color: #000; }
 
-.post p a {
+.post p a, .footer a {
   border-bottom: 1px solid #000; }
-  .post p a:hover {
+  .post p a:hover, .footer a:hover {
     text-decoration: none;
     border-bottom-color: #27b321; }
 
-.read-more-link {
+.read-more-link, .cta {
   font-weight: bold;
   border-bottom: 2px solid #000; }
-  .read-more-link:hover {
+  .read-more-link:hover, .cta:hover {
     text-decoration: none;
     border-bottom-color: #27b321; }
 
@@ -31,6 +319,9 @@ a {
 .masthead {
   padding: 17px 0;
   min-height: 68px; }
+
+.about .masthead {
+  margin: 0; }
 
 @media only screen and (min-width: 769px) {
   .masthead-title {
