Update about page and other tweaks

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       <div class="col-1-3">
         <h3>About me</h3>
         <p>
-          Designer, illustrator and maker of things. Creative Director at <a href="http://yoomee.com" target="_blank">Yoomee</a>. Christian, Husband, Dad, cyclist. Sheffield, UK.
+          Designer, illustrator and maker of things. Creative Director at <a href="http://yoomee.com" target="_blank">Yoomee</a>. Christian, husband, dad, cyclist. Sheffield, UK.
         </p>
         <a href="/about" class="cta">Tell me more</a>
       </div>
