--- a/css/rw.css
+++ b/css/rw.css
@@ -65,21 +65,42 @@
   float: right; }
 
 /*=============================== Homepage  ================================*/
+/* Make nav have black bg for desktops */
+/* .about {
+  @include media-query (md) {
+    .masthead {
+      padding:0;
+    }
+    .container-header {
+      margin:0;
+      padding:0;
+    }
+    .header-nav {
+      background:#000;
+      padding: 10px 20px 10px 5px;
+    }
+
+  }
+} */
 .about-header {
-  background: #314414 url(/img/about-header-sm.jpg) no-repeat center 0px;
-  height: 480px; }
+  background: #A53143 url(/img/about-header-xs.jpg) no-repeat center 70px;
+  height: 280px; }
   @media only screen and (min-width: 450px) {
     .about-header {
-      background: #314414 url(/img/about-header-md.jpg) no-repeat center 0px;
-      height: 480px; } }
+      background-image: url(/img/about-header-sm.jpg);
+      height: 450px; } }
   @media only screen and (min-width: 769px) {
     .about-header {
-      background: #314414 url(/img/about-header.jpg) no-repeat center 0px;
-      height: 480px; } }
+      background: #B99E89 url(/img/about-header-md.jpg) no-repeat center 0px;
+      height: 580px; } }
   @media only screen and (min-width: 1200px) {
     .about-header {
-      background: #314414 url(/img/about-header-xl.jpg) no-repeat center 0px;
-      height: 530px; } }
+      background: #B99E89 url(/img/about-header-lg.jpg) no-repeat center 0px;
+      height: 690px; } }
+  @media only screen and (min-width: 1400px) {
+    .about-header {
+      background: #B99E89 url(/img/about-header-xl.jpg) no-repeat center 0px;
+      height: 880px; } }
 
 .hello-wrap {
   float: left;
@@ -140,11 +161,10 @@
 
 .listy-right {
   width: 75%;
-  float: right; }
-
-.listy-right a {
-  border-bottom: 1px solid #fff;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.3); }
+  float: right;
+  letter-spacing: -0.2px; }
+  .listy-right a {
+    font-weight: bold; }
 
 .some-other-links {
   text-align: center; }
@@ -292,9 +312,9 @@ a.next-link {
 a {
   color: #000; }
 
-.post p a, .footer a {
+.post p a, .footer a, .listy-right a {
   border-bottom: 1px solid #000; }
-  .post p a:hover, .footer a:hover {
+  .post p a:hover, .footer a:hover, .listy-right a:hover {
     text-decoration: none;
     border-bottom-color: #27b321; }
 
@@ -305,10 +325,11 @@ a {
     text-decoration: none;
     border-bottom-color: #27b321; }
 
+/* Navigation stuff */
 .rw-logo a {
   text-indent: -9000em;
   display: block;
-  background: url(/img/rw_logo.png) no-repeat top center;
+  background: url(/img/rw-logo.png) no-repeat top center;
   width: 100%;
   height: 40px;
   background-size: 117px; }
@@ -325,11 +346,11 @@ a {
 
 @media only screen and (min-width: 769px) {
   .masthead-title {
-    float: left; } }
+    float: left;
+    margin-left: 10px; } }
 
-@media only screen and (min-width: 1200px) {
-  .container-header {
-    max-width: 1200px; } }
+.container-header {
+  max-width: 1780px; }
 
 @media only screen and (min-width: 769px) {
   .sidebar-toggle {
@@ -357,3 +378,17 @@ ul.header-nav {
 
 .about .nav-about, .blog .nav-blog {
   font-weight: bold; }
+
+.nav-fixed .masthead {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  float: left; }
+
+.inverted .rw-logo a {
+  background-image: url(/img/rw-logo-white.png); }
+.inverted .sidebar-toggle:before {
+  color: #fff; }
+.inverted ul.header-nav li a {
+  color: #fff; }
