--- a/css/rw.scss
+++ b/css/rw.scss
@@ -12,7 +12,7 @@ a {
 $accent: #27b321 !default;
 
 
-.post p a, .footer a {
+.post p a, .footer a, .listy-right a {
   border-bottom: 1px solid #000;
   &:hover {
     text-decoration:none;
@@ -28,10 +28,12 @@ $accent: #27b321 !default;
   }
 }
 
+/* Navigation stuff */
+
 .rw-logo a {
   text-indent: -9000em;
   display: block;
-  background: url(/img/rw_logo.png) no-repeat top center;
+  background: url(/img/rw-logo.png) no-repeat top center;
   width:100%;
   height: 40px;
   background-size: 117px;
@@ -51,18 +53,19 @@ $accent: #27b321 !default;
 .masthead-title {
   @include media-query (sm) {
     float:left;
+    margin-left:10px;
   }
 }
 .container-header {
-  @include media-query (lg) {
-    max-width:1200px;
-  }
+    max-width:1780px;
 }
 .sidebar-toggle {
   @include media-query (sm) {
     display:none;
   }
 }
+
+
 ul.header-nav {
   float:right;
   display:none;
@@ -88,4 +91,24 @@ ul.header-nav {
 }
 .about .nav-about, .blog .nav-blog {
   font-weight:bold;
+}
+.nav-fixed {
+  .masthead {
+    position:absolute;
+    top:0px;
+    left:0px;
+    width:100%;
+    float:left;
+  }
+}
+.inverted {
+  .rw-logo a {
+    background-image: url(/img/rw-logo-white.png);
+  }
+  .sidebar-toggle:before {
+    color:#fff;
+  }
+  ul.header-nav li a {
+    color:#fff
+  }
 }
