--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,10 +14,6 @@
   </title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="/css/poole.css">
-  <link rel="stylesheet" href="/css/syntax.css">
-  <link rel="stylesheet" href="/css/lanyon.css">
-  <link rel="stylesheet" href="/css/font-awesome.min.css"> 
   <!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
   <link href='http://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 
@@ -29,4 +25,15 @@
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+
+  <!-- Javascripts -->
+  <!--==================================================-->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script type="text/javascript" src="/js/modernizr.js"></script>
+  <script type="text/javascript" src="/js/fitvids.js"></script>
+  <script type="text/javascript" src="/js/jquery.scrollUp.min.js"></script>
+  <script type="text/javascript" src="/js/isotope.js"></script>
+  <script type="text/javascript" src="/js/scripts.js"></script>
+
+
 </head>
