--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,14 +4,49 @@
 
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
-  <div class="sidebar-item">
-    <p>{{ site.description }}</p>
-  </div>
+
+  {% comment %}
+    <div class="sidebar-item">
+      <p>{{ site.description }}</p>
+    </div>
+  {% endcomment %}
 
   <nav class="sidebar-nav">
-    <a class="sidebar-nav-item nav-blog {% if page.url == site.baseurl %} active{% endif %}" href="/">Blog</a>
-    <a class="sidebar-nav-item nav-about" href="/about">About</a>
+    <a class="sidebar-nav-item sidebar-blog {% if page.url == site.baseurl %} active{% endif %}" href="/">Blog</a>
+    <a class="sidebar-nav-item sidebar-about" href="/about">About me</a>
+    <a href="http://twitter.com/richwells" class="twitter sidebar-social" target="_blank"> <i class="fa fa-twitter"></i>
+      <span>Twitter</span></a>
+    <a href="http://instagram.com/richwells" class="instagram sidebar-social" target="_blank"> <i class="fa fa-instagram"></i> <span> Instagram</span></a>
   </nav>
+
+
+
+  <div class="col-play sidebar-col">
+    <h3 class="sidebar-nav-item sidebar-work-and-play">Work &amp; play</h3>
+    <ul class="footer-list">
+      <li>
+        <a href="http://yoomee.com" target="_blank">Yoomee</a>
+      </li>
+      <li>
+        <a href="http://dayoffwithsophie.tumblr.com" target="_blank">Daddy daycare</a>
+      </li>
+      <li>
+        <a href="http://richwells.me/better-google-tasks" target="_blank">Better Google Tasks</a>
+      </li>
+      <li>
+        <a href="http://cambodia.richwells.me" target="_blank">Cambodia scrapbook</a>
+      </li>
+      <li>
+        <a href="http://100daybiblechallenge.com" target="_blank">100 Day Bible Challenge</a>
+      </li>
+      <li>
+        <a href="https://www.thelevelcollective.com/rich-wells/" target="_blank">The Level Collective</a>
+      </li>
+      <li>
+        <a href="https://www.pinterest.com/richiewells/sketchbook/" target="_blank">Pinterest sketchbook</a>
+      </li>
+    </ul>
+  </div>
 
 
 {% comment %}
