--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,11 +11,13 @@ layout: default
 
 <div class="related-strip">
   <h2>Related Posts</h2>
-  <div class="grid">
+  <div id="isotope" class="grid">
     {% for post in site.related_posts limit:6 %}
       <div class="col-1-3 col-related">
         <a href="{{ post.url }}">
-          <img src="/downloads/{{post.img}}" alt="{{ post.title }}" class="post-img"/>
+          <span class="post-img-wrap">
+            <img src="/downloads/{{post.img}}" alt="{{ post.title }}" class="post-img"/>
+          </span>
           <h3 class="post-title">{{ post.title }}</h3>
           <small>{{ post.date | date_to_string }}</small>
         </a>
