--- a/css/_sass/_blog.css.scss
+++ b/css/_sass/_blog.css.scss
@@ -1,8 +1,64 @@
+/*
+* Posts and pages
+*
+* Each post is wrapped in `.post` and is used on default and post layouts. Each
+* page is wrapped in `.page` and is only used on the page layout.
+*/
+
+.page,
+.post {
+  margin-bottom: 4em;
+}
+
+/* Blog post or page title */
+.page-title,
+.post-title,
+.post-title a {
+  color: #303030;
+}
+.page-title,
+.post-title {
+  margin-top: 0;
+}
+
+/* Meta data line below post title */
+.post-date {
+  display: block;
+  margin-top: -.5rem;
+  margin-bottom: 1rem;
+  color: #9a9a9a;
+}
+
+/* Related posts */
+.related {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  border-top: 1px solid #eee;
+}
+.related-posts {
+  padding-left: 0;
+  list-style: none;
+}
+.related-posts h3 {
+  margin-top: 0;
+}
+.related-posts li small {
+  font-size: 75%;
+  color: #999;
+}
+.related-posts li a:hover {
+  color: #268bd2;
+  text-decoration: none;
+}
+.related-posts li a:hover small {
+  color: inherit;
+}
+
 .read-more-link {
   font-weight:bold;
 }
 .related-strip {
-  background:#f5f5f5;
+  background:#e4e4e4;
   float:left;
   width:100%;
   padding:$pad;
@@ -18,11 +74,42 @@
   }
   .grid {
     @include media-query (lg) {
-      max-width:1200px;
+      max-width:1400px;
       float:none;
       margin:0 auto;
     }
 
 
+  }
+}
+.col-related {
+  h3 {
+    margin:0;
+    font-size:20px;
+  }
+  small {
+    color: #999;
+    float: left;
+    width: 100%;
+    margin: -1px 0 0;
+    font-size: 16px;
+  }
+  a {
+    &:hover {
+      text-decoration:none;
+    }
+    img.post-img {
+      position:relative;
+      margin-bottom:13px;
+      &:hover {
+        opacity:0.9;
+      }
+    }
+
+  }
+  .post-img-wrap {
+    display:block;
+    width:100%;
+    float:left;
   }
 }
