--- a/css/_sass/_grid.css.scss
+++ b/css/_sass/_grid.css.scss
@@ -1,3 +1,26 @@
+/*
+* Container
+*
+* Center the page content.
+*/
+
+.container {
+  max-width: 28rem;
+  padding-left:  1rem;
+  padding-right: 1rem;
+  margin-left:  auto;
+  margin-right: auto;
+}
+@media (min-width: 38em) {
+  .container {
+    max-width: 32rem;
+  }
+}
+@media (min-width: 56em) {
+  .container {
+    max-width: 38rem;
+  }
+}
 
 $pad: 30px;
 
