--- a/css/_sass/_responsive.css.scss
+++ b/css/_sass/_responsive.css.scss
@@ -74,4 +74,8 @@ $md-end:          $lg-start - 1px!default;
      @media only screen and (min-width: 767px) and (max-height: 700px) { @content; }
 
   }
+
+  @if $media-query == retina {
+    @media (-webkit-min-device-pixel-ratio: 2),(min-resolution: 192dpi) {@content;}
+  }
 }
