--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="container container-header">
     <h3 class="masthead-title rw-logo">
       <a href="/" title="Home">{{ site.title }}</a>
-      <small>{{ site.tagline }}</small>
+      {%comment%}<small>{{ site.tagline }}</small>{%endcomment%}
     </h3>
     <ul class="header-nav">
       <li><a href="/" class="nav-blog">Blog</a></li>
