--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
+  <img src="{{ site.baseurl }}/downloads/better-google-tasks.jpg" alt="Better Google Tasks" />
   {% include head.html %}
 
   <body class="layout-reverse {{ page.body-class }}">
