--- a/_includes/head.html
+++ b/_includes/head.html
@@ -48,7 +48,7 @@
   <!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
   <link href='http://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 
-  <link rel="stylesheet" href="/css/rw.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/rw.css">
 
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-144-precomposed.png">
