fix broken links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <img src="{{ site.baseurl }}downloads/better-google-tasks.jpg" alt="Better Google Tasks" />
   {% include head.html %}
 
   <body class="layout-reverse {{ page.body-class }}">
@@ -10,7 +9,7 @@
     <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
          content to avoid any CSS collisions with our real content. -->
     <div class="wrap">
-      {% include header.html %}
+      {% include masthead.html %}
       {{ content }}
     </div>
 
