--- a/_includes/head.html
+++ b/_includes/head.html
@@ -60,18 +60,18 @@
   <!-- Javascripts -->
   <!--==================================================-->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script type="text/javascript" src="/js/modernizr.js"></script>
-  <script type="text/javascript" src="/js/fitvids.js"></script>
-  <script type="text/javascript" src="/js/jquery.scrollUp.min.js"></script>
-  <script type="text/javascript" src="/js/isotope.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/js/modernizr.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/js/fitvids.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/js/jquery.scrollUp.min.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/js/isotope.js"></script>
 
   <script>
   // Picture element HTML5 shiv
   document.createElement( "picture" );
   </script>
-  <script src="/js/picturefill.min.js" async></script>
+  <script src="{{ site.baseurl }}/js/picturefill.min.js" async></script>
 
-  <script type="text/javascript" src="/js/scripts.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/js/scripts.js"></script>
 
 
 </head>
