--- a/css/_sass/_masthead.css.scss
+++ b/css/_sass/_masthead.css.scss
@@ -38,7 +38,7 @@
 .rw-logo a {
   text-indent: -9000em;
   display: block;
-  background: url(/img/rw-logo.png) no-repeat top center;
+  background: url(../img/rw-logo.png) no-repeat top center;
   width:100%;
   height: 40px;
   background-size: 117px;
@@ -108,7 +108,7 @@ ul.header-nav {
 }
 .inverted {
   .rw-logo a {
-    background-image: url(/img/rw-logo-white.png);
+    background-image: url(../img/rw-logo-white.png);
   }
   .sidebar-toggle:before {
     color:#fff;
