--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,27 +22,7 @@
   <meta content="index, follow" name="robots">
 
 
-  <script>!function(a,b,c,d,e){function g(a,c,d,e){var f=b.getElementsByTagName("script")[0];a.src=e,a.id=c,a.setAttribute("class",d),f.parentNode.insertBefore(a,f)}a.Mobify={points:[+new Date]};var f=/((; )|#|&|^)mobify=(\d)/.exec(location.hash+"; "+b.cookie);if(f&&f[3]){if(!+f[3])return}else if(!c())return;b.write('<plaintext style="display:none">'),setTimeout(function(){var c=a.Mobify=a.Mobify||{};c.capturing=!0;var f=b.createElement("script"),h="mobify",i=function(){var c=new Date;c.setTime(c.getTime()+3e5),b.cookie="mobify=0; expires="+c.toGMTString()+"; path=/",a.location=a.location.href};f.onload=function(){if(e)if("string"==typeof e){var c=b.createElement("script");c.onerror=i,g(c,"main-executable",h,mainUrl)}else a.Mobify.mainExecutable=e.toString(),e()},f.onerror=i,g(f,"mobify-js",h,d)})}(window,document,function(){a=/webkit|(firefox)[\/\s](\d+)|(opera)[\s\S]*version[\/\s](\d+)|(trident)[\/\s](\d+)/i.exec(navigator.userAgent);return!a||a[1]&&4>+a[2]||a[3]&&11>+a[4]||a[5]&&6>+a[6]?!1:!0},
-
-  // path to mobify.js
-  "//cdn.mobify.com/mobifyjs/build/mobify-2.0.16.min.js",
-
-  // calls to APIs go here (or path to a main.js)
-  function() {
-    var capturing = window.Mobify && window.Mobify.capturing || false;
-
-    if (capturing) {
-      Mobify.Capture.init(function(capture){
-        var capturedDoc = capture.capturedDoc;
-
-        var images = capturedDoc.querySelectorAll("img, picture");
-        Mobify.ResizeImages.resize(images);
-
-        // Render source DOM to document
-        capture.renderCapturedDoc();
-      });
-    }
-  });</script>
+  {% include mobify.html %}
 
   <!-- CSS -->
   <!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
@@ -51,8 +31,8 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/css/rw.css">
 
   <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-144-precomposed.png">
-  <link rel="shortcut icon" href="/public/favicon.ico">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/img/apple-touch-icon-144-precomposed.png">
+  <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico">
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
