--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -1,12 +1,12 @@
 <div class="masthead">
   <div class="container container-header">
     <h3 class="masthead-title rw-logo">
-      <a href="/" title="Home">{{ site.title }}</a>
+      <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
       {%comment%}<small>{{ site.tagline }}</small>{%endcomment%}
     </h3>
     <ul class="header-nav">
-      <li><a href="/" class="nav-blog">Blog</a></li>
-      <li><a href="/about" class="nav-about">About me</a></li>
+      <li><a href="{{ site.baseurl }}/" class="nav-blog">Blog</a></li>
+      <li><a href="{{ site.baseurl }}/about" class="nav-about">About me</a></li>
       <li><a href="http://twitter.com/richwells" target="blank"><i class="fa fa-twitter"></i></a></li>
       <li><a href="http://instagram.com/richwells" target="blank"><i class="fa fa-instagram"></i></a></li>
     </ul>
