--- a/css/_sass/_sidebar.css.scss
+++ b/css/_sass/_sidebar.css.scss
@@ -66,11 +66,11 @@
 .sidebar-nav-item {
   text-indent: -9000em;
   display:block;
-  background: url(/img/sidebar-doodles.png ) no-repeat 0 0;
+  background: url(../img/sidebar-doodles.png ) no-repeat 0 0;
   width:100%;
   height:20px;
   @include media-query (retina) {
-    background: url(/img/sidebar-doodles-2x.png ) no-repeat 0 0;
+    background: url(../img/sidebar-doodles-2x.png ) no-repeat 0 0;
     background-size:162px 210px;
   }
   &.sidebar-blog {
@@ -87,6 +87,7 @@
     height: 40px;
     margin: 40px 0 0;
   }
+  
 }
 .sidebar-col {
   padding:0 20px 40px;
