--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,8 @@ layout: default
       <div class="col-1-3 col-related">
         <a href="{{ site.baseurl }}{{ post.url }}">
           <span class="post-img-wrap">
-            <img src="{{ site.baseurl }}/downloads/{{post.img}}" alt="{{ post.title }}" class="post-img"/>
+            <!-- <img src="{{ site.baseurl }}/downloads/{{post.img}}" alt="{{ post.title }}" class="post-img"/> -->
+            <img src="ir0.mobify.com/200/{{ site.baseurl }}/downloads/{{post.img}}" alt="{{ post.title }}">
           </span>
           <h3 class="post-title">{{ post.title }}</h3>
           <small>{{ post.date | date_to_string }}</small>
