change url of post image

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ layout: default
         <a href="{{ site.baseurl }}{{ post.url }}">
           <span class="post-img-wrap">
             <!-- <img src="{{ site.baseurl }}/downloads/{{post.img}}" alt="{{ post.title }}" class="post-img"/> -->
-            <img src="ir0.mobify.com/200/{{ site.baseurl }}/downloads/{{post.img}}" alt="{{ post.title }}">
+            <img src="ir0.mobify.com/200/http://richwells.github.io{{ site.baseurl }}/downloads/{{post.img}}" alt="{{ post.title }}">
           </span>
           <h3 class="post-title">{{ post.title }}</h3>
           <small>{{ post.date | date_to_string }}</small>
