--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <div class="footer">
   <div class="footer-container">
     <div class="grid">
-      <div class="col-1-3">
+      <div class="col-1-3 col-footer-about">
         <h3>About me</h3>
         <p>
           Designer, illustrator and maker of things. Creative Director at <a href="http://yoomee.com" target="_blank">Yoomee</a>. Christian, husband, dad, cyclist. Sheffield, UK.
