--- a/css/rw.css
+++ b/css/rw.css
@@ -1575,19 +1575,22 @@ ul.header-nav li a i { font-size: 22px; line-height: 30px; }
 
 .header-top { position: relative; z-index: 40; }
 
-.lower-strip { position: relative; z-index: 10; padding: 0 50px; }
+.lower-strip { position: relative; z-index: 10; padding: 0 10px; }
+@media only screen and (min-width: 769px) { .lower-strip { padding: 0 50px; } }
 
 .about-wrap { max-width: 800px; margin: 0 auto; }
 
-.about-intro { text-align: center; font-weight: 300; color: #333; font-size: 40px; line-height: 1.2; margin: 90px 0; }
+h2.about-intro { font-weight: normal; text-align: center; line-height: 1.2; font-size: 23px; margin: 40px 0; }
+@media only screen and (min-width: 769px) { h2.about-intro { font-size: 40px; margin: 70px 0; } }
 
 .listy { color: #333; }
-
-.listy li { clear: both; line-height: 1.4; margin-bottom: 40px; float: left; list-style-type: none; }
-
-.listy-big { margin-top: 40px; font-size: 26px; font-weight: 300; }
-
+.listy li { clear: both; line-height: 1.4; float: left; list-style-type: none; margin-bottom: 40px; }
+@media only screen and (min-width: 769px) { .listy li { margin-bottom: 40px; } }
 .listy a { color: #333; text-decoration: none; font-weight: 500; }
+.listy a img { margin: 0; }
+
+.listy-big { margin-top: 40px; font-size: 16px; font-weight: 300; }
+@media only screen and (min-width: 769px) { .listy-big { font-size: 26px; } }
 
 .listy-left { float: left; width: 20%; }
 
@@ -1646,6 +1649,9 @@ a.next-link { text-align: center; width: 100%; font-size: 18px; line-height: 2; 
 #myCarousel { margin-top: 40px; }
 
 .featured-work-title { position: absolute; z-index: 100; text-align: center; width: 100%; height: 40px; margin: -40px 0 0; font-size: 20px; padding: 10px 0; background: #00c0eb; color: #fff; }
+
+/* hide about thing in footer for mobile */
+@media only screen and (max-width: 953px) { .about .col-footer-about { display: none; } }
 
 /*
 * Posts and pages
