--- a/css/rw.css
+++ b/css/rw.css
@@ -1480,7 +1480,7 @@ a.pagination-item:hover { background-color: #f5f5f5; }
 
 @media (max-width: 48em) { .masthead-title { text-align: center; }
   .masthead-title small { display: none; } }
-.rw-logo a { text-indent: -9000em; display: block; background: url(../img/rw-logo.png) no-repeat top center; width: 100%; height: 40px; background-size: 117px; }
+.rw-logo a { text-indent: -9000em; display: block; background: url(../img/rw-logo.png) no-repeat top left; width: 100%; height: 40px; background-size: 117px; }
 @media only screen and (min-width: 769px) { .rw-logo a { width: 115px; } }
 
 .masthead { padding: 17px 0; min-height: 68px; }
@@ -1575,12 +1575,12 @@ ul.header-nav li a i { font-size: 22px; line-height: 30px; }
 
 .header-top { position: relative; z-index: 40; }
 
-.lower-strip { position: relative; z-index: 10; padding: 0 10px; }
+.lower-strip { position: relative; z-index: 10; padding: 0 20px; }
 @media only screen and (min-width: 769px) { .lower-strip { padding: 0 50px; } }
 
 .about-wrap { max-width: 800px; margin: 0 auto; }
 
-h2.about-intro { font-weight: normal; text-align: center; line-height: 1.2; font-size: 23px; margin: 40px 0; }
+h2.about-intro { font-weight: normal; text-align: center; line-height: 1.2; font-size: 23px; margin: 30px 0; }
 @media only screen and (min-width: 769px) { h2.about-intro { font-size: 40px; margin: 70px 0; } }
 
 .listy { color: #333; }
@@ -1589,7 +1589,7 @@ h2.about-intro { font-weight: normal; text-align: center; line-height: 1.2; font
 .listy a { color: #333; text-decoration: none; font-weight: 500; }
 .listy a img { margin: 0; }
 
-.listy-big { padding: 0; margin-top: 40px; font-size: 16px; font-weight: 300; }
+.listy-big { padding: 0; margin-top: 40px; font-size: 17px; font-weight: 300; }
 @media only screen and (min-width: 769px) { .listy-big { font-size: 26px; } }
 
 .listy-left { float: left; width: 20%; }
@@ -1696,7 +1696,5 @@ a.next-link { text-align: center; width: 100%; font-size: 18px; line-height: 2; 
 .col-related a img.post-img { position: relative; margin-bottom: 13px; }
 .col-related a img.post-img:hover { opacity: 0.9; }
 .col-related .post-img-wrap { display: block; width: 100%; float: left; }
-
-@media only screen and (max-width: 953px) { .post-title, .post-date { text-align: center; } }
 
 /*# sourceMappingURL=rw.css.map */
