--- a/css/rw.css
+++ b/css/rw.css
@@ -31,7 +31,8 @@ h3 { margin-top: 1.5rem; font-size: 1.25rem; }
 h4, h5, h6 { margin-top: 1rem; font-size: 1rem; }
 
 /* Body text */
-p { margin-top: 0; margin-bottom: 1rem; }
+p, img, .fitvids { margin-top: 0; margin-bottom: 20px; }
+@media only screen and (min-width: 954px) { p, img, .fitvids { margin-bottom: 30px; } }
 
 strong { color: #303030; }
 
@@ -80,7 +81,7 @@ blockquote { padding: .5rem 1rem; margin: .8rem 0; color: #7a7a7a; border-left: 
 blockquote p:last-child { margin-bottom: 0; }
 
 @media (min-width: 30em) { blockquote { padding-right: 5rem; padding-left: 1.25rem; } }
-img { display: block; max-width: 100%; margin: 0 0 1rem; border-radius: 5px; }
+img { display: block; max-width: 100%; border-radius: 5px; }
 
 /* Tables */
 table { margin-bottom: 1rem; width: 100%; border: 1px solid #e5e5e5; border-collapse: collapse; }
