--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,15 +12,7 @@ layout: default
 <div class="related-strip">
   <h2>Related Posts</h2>
   <div id="isotope" class="grid">
-    {% assign hasSimilar = '' %}
-    {% for post in site.related_posts %}
-    {% assign postHasSimilar = false %}
-    {% for tag in post.tags %}
-    {% for thisTag in page.tags %}
-    {% if postHasSimilar == false and hasSimilar.size < 6 and post != page and tag == thisTag %}
-    {% if hasSimilar.size == 0 %}
-
-      {% endif %}
+    {% for post in site.related_posts limit:6 %}
       <div class="col-1-3 col-related">
         <a href="{{ site.baseurl }}{{ post.url }}">
           <span class="post-img-wrap">
@@ -31,6 +23,29 @@ layout: default
           <small>{{ post.date | date_to_string }}</small>
         </a>
       </div>
+    {% endfor %}
+  </div>
+</div>
+<div class="related-strip">
+  <h2>Related Posts</h2>
+  <div id="isotope" class="grid">
+    {% assign hasSimilar = '' %}
+    {% for post in site.related_posts %}
+    {% assign postHasSimilar = false %}
+    {% for tag in post.tags %}
+    {% for thisTag in page.tags %}
+    {% if postHasSimilar == false and hasSimilar.size < 6 and post != page and tag == thisTag %}
+    {% if hasSimilar.size == 0 %}
+
+      {% endif %}
+      
+      <li class="relatedPost">
+        <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}
+          {% if post.series %}
+          (Series: {{ post.series }})
+          {% endif %}
+        </a>
+      </li>
       {% capture hasSimilar %}{{ hasSimilar }}*{% endcapture %}
       {% assign postHasSimilar = true %}
       {% endif %}
