--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,35 @@ layout: default
   </div>
 </div> <!-- end container -->
 
+
+{% assign hasSimilar = '' %}
+{% for post in site.related_posts %}
+{% assign postHasSimilar = false %}
+{% for tag in post.tags %}
+{% for thisTag in page.tags %}
+{% if postHasSimilar == false and hasSimilar.size < 6 and post != page and tag == thisTag %}
+{% if hasSimilar.size == 0 %}
+<h4>Similar Posts</h4>
+<ul>
+  {% endif %}
+  <li class="relatedPost">
+    <a href="{{ site.url }}{{ post.url }}">{{ post.title }}
+      {% if post.series %}
+      (Series: {{ post.series }})
+      {% endif %}
+    </a>
+  </li>
+  {% capture hasSimilar %}{{ hasSimilar }}*{% endcapture %}
+  {% assign postHasSimilar = true %}
+  {% endif %}
+  {% endfor %}
+  {% endfor %}
+  {% endfor %}
+  {% if hasSimilar.size > 0 %}
+</ul>
+{% endif %}
+
+
 <div class="related-strip">
   <h2>Related Posts</h2>
   <div id="isotope" class="grid">
@@ -38,7 +67,7 @@ layout: default
     {% if hasSimilar.size == 0 %}
 
       {% endif %}
-      
+
       <li class="relatedPost">
         <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}
           {% if post.series %}
