--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
 
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+  <meta http-equiv="CACHE-CONTROL" content="NO-CACHE">
 
   <title>
     {% if page.title %}
