--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,19 @@ layout: default
 </div> <!-- end container -->
 
 
+{% if content and page.related %}
+<h2>Related Posts</h2>
+<ul>
+  {% for post in site.posts %}
+  {% if page.related contains post.title %}
+  <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+  {% endif %}
+  {% endfor %}
+</ul>
+{% endif %}
+
+
+
 {% assign hasSimilar = '' %}
 {% for post in site.related_posts %}
 {% assign postHasSimilar = false %}
@@ -45,7 +58,6 @@ layout: default
       <div class="col-1-3 col-related">
         <a href="{{ site.baseurl }}{{ post.url }}">
           <span class="post-img-wrap">
-            <!-- <img src="{{ site.baseurl }}/downloads/{{post.img}}" alt="{{ post.title }}" class="post-img"/> -->
             <img src="http://ir0.mobify.com/500/http://richwells.github.io{{ site.baseurl }}/downloads/{{post.img}}" alt="{{ post.title }}">
           </span>
           <h3 class="post-title">{{ post.title }}</h3>
