--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,8 +14,8 @@ layout: default
 <h2>Related Posts</h2>
 <ul>
   {% for post in site.posts %}
-  {% if page.related contains post.title %}
-  <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+  {% if page.related contains post.tag %}
+  <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
   {% endif %}
   {% endfor %}
 </ul>
