fix modernizr imageLoaded

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,6 +43,7 @@
   <script type="text/javascript" src="{{ site.baseurl }}/js/modernizr.js"></script>
   <script type="text/javascript" src="{{ site.baseurl }}/js/fitvids.js"></script>
   <script type="text/javascript" src="{{ site.baseurl }}/js/jquery.scrollUp.min.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/js/imagesloaded.pkgd.min.js"></script>
   <script type="text/javascript" src="{{ site.baseurl }}/js/isotope.js"></script>
 
   <script>
@@ -51,7 +52,7 @@
   </script>
   <script src="{{ site.baseurl }}/js/picturefill.min.js" async></script>
 
-  <script type="text/javascript" src="{{ site.baseurl }}/js/scripts.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/js/min/scripts-min.js"></script>
 
 
 </head>
