--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,40 +21,10 @@ layout: default
 </ul>
 {% endif %}
 
-
-
-{% assign hasSimilar = '' %}
-{% for post in site.related_posts %}
-{% assign postHasSimilar = false %}
-{% for tag in post.tags %}
-{% for thisTag in page.tags %}
-{% if postHasSimilar == false and hasSimilar.size < 6 and post != page and tag == thisTag %}
-{% if hasSimilar.size == 0 %}
-<h4>Similar Posts</h4>
-<ul>
-  {% endif %}
-  <li class="relatedPost">
-    <a href="{{ site.url }}{{ post.url }}">{{ post.title }}
-      {% if post.series %}
-      (Series: {{ post.series }})
-      {% endif %}
-    </a>
-  </li>
-  {% capture hasSimilar %}{{ hasSimilar }}*{% endcapture %}
-  {% assign postHasSimilar = true %}
-  {% endif %}
-  {% endfor %}
-  {% endfor %}
-  {% endfor %}
-  {% if hasSimilar.size > 0 %}
-</ul>
-{% endif %}
-
-
-<div class="related-strip">
+<div class="related-strip" id="container">
   <h2>Related Posts</h2>
   <div id="isotope" class="grid">
-    {% for post in site.related_posts limit:6 %}
+    {% for post in site.related_posts limit:9 %}
       <div class="col-1-3 col-related">
         <a href="{{ site.baseurl }}{{ post.url }}">
           <span class="post-img-wrap">
