--- a/css/rw.scss
+++ b/css/rw.scss
@@ -11,3 +11,4 @@
 @import '_sass/footer.css.scss';
 @import '_sass/about.css.scss';
 @import '_sass/blog.css.scss';
+@import '_sass/storytime.css.scss';
