--- a/css/_sass/_grid.css.scss
+++ b/css/_sass/_grid.css.scss
@@ -57,7 +57,7 @@ $pad: 30px;
 // remove padding for mobile
 
 [class*='col-'] {
-  @include media-query (sm-max) {
+  @include media-query (xs-max) {
     width:100%;
     padding:0;
   }
