--- a/css/rw.css
+++ b/css/rw.css
@@ -1456,7 +1456,7 @@ a.pagination-item:hover { background-color: #f5f5f5; }
 
 .col-1-8 { width: 12.5%; }
 
-@media only screen and (max-width: 953px) { [class*='col-'] { width: 100%; padding: 0; } }
+@media only screen and (max-width: 768px) { [class*='col-'] { width: 100%; padding: 0; } }
 
 /* Opt-in outside padding */
 .grid-pad { padding: 30px 0 30px 30px; }
@@ -1703,6 +1703,12 @@ a.next-link { text-align: center; width: 100%; font-size: 18px; line-height: 2; 
 .col-related a .post-img-wrap img { position: relative; margin-bottom: 13px; }
 .col-related a .post-img-wrap img:hover { opacity: 0.9; }
 .col-related .post-img-wrap { display: block; width: 100%; float: left; }
+
+ul.blog-tag-list { margin: 0 0 60px; padding: 0; list-style-type: none; float: left; width: 100%; }
+ul.blog-tag-list li { float: left; margin: 0; padding: 0; }
+ul.blog-tag-list li a { display: block; float: left; background: #f5f5f5; padding: 3px 9px; margin: 0 5px 10px; }
+
+.tag-photos li a.tag-link-photos, .tag-illustration li a.tag-link-illustrations, .tag-work li a.tag-link-work, .tag-thoughts li a.tag-link-thoughts, .tag-sketches li a.tag-link-sketches, .tag-yoomee li a.tag-link-yoomee, .tag-video li a.tag-link-video, .tag-everything li a.tag-link-everything, .tag-tfbloggers li a.tag-link-tfbloggers, .tag-inspiration li a.tag-link-inspiration { background: #000; color: #fff; }
 
 .storytime { background-color: #fff; padding: 20px; }
 
