--- a/css/rw.scss
+++ b/css/rw.scss
@@ -11,4 +11,5 @@
 @import '_sass/footer.css.scss';
 @import '_sass/about.css.scss';
 @import '_sass/blog.css.scss';
+@import '_sass/tag_links.css.scss';
 @import '_sass/storytime.css.scss';
