--- a/_includes/tag-links.html
+++ b/_includes/tag-links.html
@@ -4,7 +4,8 @@
     <li><a class="tag-link-sketches" href="{{ site.baseurl }}/tag/sketches">sketches</a></li>
     <li><a class="tag-link-photos" href="{{ site.baseurl }}/tag/photos">photos</a></li>
     <li><a class="tag-link-video" href="{{ site.baseurl }}/tag/video">videos</a></li>
-    <li><a class="tag-link-work" href="{{ site.baseurl }}/tag/work">things I've made</a></li>
+    <li><a class="tag-link-work" href="{{ site.baseurl }}/tag/work">design work</a></li>
+    <li><a class="tag-link-ux" href="{{ site.baseurl }}/tag/ux">web/UX</a></li>
     <!-- <li><a class="tag-link-illustration" href="{{ site.baseurl }}/tag/illustration">Illustrations</a></li> -->
 
     <li><a class="tag-link-inspiration" href="{{ site.baseurl }}/tag/inspiration">inspiration</a></li>
