--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   {% include head.html %}
 
-  <body class="layout-reverse {{ page.body-class }}">
+  <body class="layout-reverse {{ page.body-class }} {{ page.tag }}">
 
     {% include sidebar.html %}
 
