--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,10 @@
 ---
 layout: default
 ---
+<a href="{{ site.baseurl }}/" class="all-posts-link">
+  <i class="fa fa-angle-left"></i>
+  All posts
+</a>
 <div class="container content">
   <div class="post">
     <h1 class="post-title">{{ page.title }}</h1>
@@ -26,10 +30,23 @@ layout: default
   <div id="isotope" class="grid">
     {% for post in site.related_posts limit:12 %}
       <div class="col-1-3 col-related">
+        {% if post.video %}
+        <span class="post-img-wrap">
+          {{ post.video }}
+        </span>
+        {% else %}
         <a href="{{ site.baseurl }}{{ post.url }}">
           <span class="post-img-wrap">
-            <img src="http://ir0.mobify.com/500/http://richwells.github.io{{ site.baseurl }}/downloads/{{post.img}}" alt="{{ post.title }}">
+            {% if post.thumbnail %}
+            <img src="http://ir0.mobify.com/500/http://richwells.github.io{{ site.baseurl }}/downloads/{{ post.thumbnail }} " alt="{{ post.title}}">
           </span>
+          {% elsif post.img %}
+          <img src="http://ir0.mobify.com/500/http://richwells.github.io{{ site.baseurl }}/downloads/{{post.img}}" alt="{{ post.title }}">
+          {% endif %}
+        </span>
+      </a>
+      {% endif %}
+      <a href="{{ site.baseurl }}{{ post.url }}">
           <h3 class="post-title">{{ post.title }}</h3>
           <small>{{ post.date | date_to_string }}</small>
         </a>
