--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -8,7 +8,47 @@ body-class: 'blog'
   {% include tag-links.html %}
 </div>
 
+{% comment %}
 <h2 class="post_title">{{page.title}}</h2>
+{% endcomment %}
+
+
+
+<div class="related-strip tag-strip" id="container">
+  <div id="isotope" class="grid">
+    {% for post in site.posts %}
+    {% for tag in post.tags %}
+    {% if tag == page.tag %}
+    <div class="col-1-3 col-related">
+      {% if post.video %}
+        <span class="post-img-wrap">
+          {{ post.video }}
+        </span>
+      {% else %}
+      <a href="{{ site.baseurl }}{{ post.url }}">
+        <span class="post-img-wrap">
+          {% if post.thumbnail %}
+            <img src="http://ir0.mobify.com/500/http://richwells.github.io{{ site.baseurl }}/downloads/{{ post.thumbnail }} " alt="{{ post.title}}">
+          </span>
+          {% elsif post.img %}
+          <img src="http://ir0.mobify.com/500/http://richwells.github.io{{ site.baseurl }}/downloads/{{post.img}}" alt="{{ post.title }}">
+          {% endif %}
+        </span>
+      </a>
+      {% endif %}
+      <a href="{{ site.baseurl }}{{ post.url }}">
+        <h3 class="post-title">{{ post.title }}</h3>
+        <small>{{ post.date | date_to_string }}</small>
+      </a>
+    </div>
+
+    {% endif %}
+    {% endfor %}
+    {% endfor %}
+  </div>
+</div>
+
+
 
 
 {% comment %}
@@ -19,34 +59,14 @@ body-class: 'blog'
   <li class="archive_list">
     <time style="color:#666;font-size:11px;" datetime='{{post.date | date: "%Y-%m-%d"}}'>{{post.date | date: "%m/%d/%y"}}</time> <a class="archive_list_article_link" href='{{post.url}}'>{{post.title}}</a>
     <p class="summary">{{post.summary}}
-    <ul class="tag_list">
-      {% for tag in post.tags %}
-      <li class="inline archive_list"><a class="tag_list_link" href="/tag/{{ tag }}">{{ tag }}</a></li>
-      {% endfor %}
-    </ul>
-  </li>
-  {% endif %}
-  {% endfor %}
-  {% endfor %}
-</ul>
-{% endcomment %}
-
-<div class="related-strip" id="container">
-  <div id="isotope" class="grid">
-    {% for post in site.posts %}
-    {% for tag in post.tags %}
-    {% if tag == page.tag %}
-    <div class="col-1-3 col-related">
-      <a href="{{ site.baseurl }}{{ post.url }}">
-        <span class="post-img-wrap">
-          <img src="http://ir0.mobify.com/500/http://richwells.github.io{{ site.baseurl }}/downloads/{{post.img}}" alt="{{ post.title }}">
-        </span>
-        <h3 class="post-title">{{ post.title }}</h3>
-        <small>{{ post.date | date_to_string }}</small>
-      </a>
-    </div>
+      <ul class="tag_list">
+        {% for tag in post.tags %}
+        <li class="inline archive_list"><a class="tag_list_link" href="/tag/{{ tag }}">{{ tag }}</a></li>
+        {% endfor %}
+      </ul>
+    </li>
     {% endif %}
     {% endfor %}
     {% endfor %}
-  </div>
-</div>
+  </ul>
+  {% endcomment %}
