--- a/css/rw.css
+++ b/css/rw.css
@@ -1668,10 +1668,12 @@ a.next-link { text-align: center; width: 100%; font-size: 18px; line-height: 2; 
 
 .post-preview img { width: 100%; }
 
+.all-posts-link { font-size: 19px; border-bottom: 1px solid #000; margin: 7px 0 40px 40px; float: left; }
+
 /* Blog post or page title */
 .page-title, .post-title, .post-title a { color: #303030; }
 
-.page-title, .post-title { margin-top: 0; }
+.page-title, .post-title { margin-top: 0; clear: both; }
 
 /* Meta data line below post title */
 .post-date { display: block; margin-top: -.5rem; margin-bottom: 1rem; color: #9a9a9a; }
@@ -1700,15 +1702,37 @@ a.next-link { text-align: center; width: 100%; font-size: 18px; line-height: 2; 
 .col-related h3 { margin: 0; font-size: 20px; }
 .col-related small { color: #999; float: left; width: 100%; margin: -1px 0 0; font-size: 16px; }
 .col-related a:hover { text-decoration: none; }
-.col-related a .post-img-wrap img { position: relative; margin-bottom: 13px; }
-.col-related a .post-img-wrap img:hover { opacity: 0.9; }
+.col-related .post-img-wrap { margin-bottom: 13px; }
+.col-related .post-img-wrap img { position: relative; margin-bottom: 0px; }
+.col-related .post-img-wrap img:hover { opacity: 0.9; }
+.col-related .post-img-wrap .fitvids { margin: 0; }
 .col-related .post-img-wrap { display: block; width: 100%; float: left; }
 
 ul.blog-tag-list { margin: 0 0 60px; padding: 0; list-style-type: none; float: left; width: 100%; }
 ul.blog-tag-list li { float: left; margin: 0; padding: 0; }
-ul.blog-tag-list li a { display: block; float: left; background: #f5f5f5; padding: 3px 9px; margin: 0 5px 10px; }
+ul.blog-tag-list a { display: block; float: left; background: #fff; padding: 3px 9px; margin: 0 5px 10px; }
 
-.tag-photos li a.tag-link-photos, .tag-illustration li a.tag-link-illustrations, .tag-work li a.tag-link-work, .tag-thoughts li a.tag-link-thoughts, .tag-sketches li a.tag-link-sketches, .tag-yoomee li a.tag-link-yoomee, .tag-video li a.tag-link-video, .tag-everything li a.tag-link-everything, .tag-tfbloggers li a.tag-link-tfbloggers, .tag-inspiration li a.tag-link-inspiration { background: #000; color: #fff; }
+.blog-index ul.blog-tag-list a { background: #f5f5f5; }
+
+.tag-photos a.tag-link-photos, .tag-illustration a.tag-link-illustrations, .tag-work a.tag-link-work, .tag-thoughts a.tag-link-thoughts, .tag-sketches a.tag-link-sketches, .tag-yoomee a.tag-link-yoomee, .tag-video a.tag-link-video, .blog-index .tag-everything a.tag-link-everything, .tag-tfbloggers a.tag-link-tfbloggers, .tag-ux a.tag-link-ux, .tag-inspiration a.tag-link-inspiration { background: #000; color: #fff; }
+
+.tag-strip { background: #fff; }
+
+body.sketches { background: #ffb6b6; }
+
+body.photos { background: #C7ECF7; }
+
+body.work { background: #E0B394; }
+
+body.inspiration { background: #a9b6ba; }
+
+body.yoomee { background: #FC986D; }
+
+body.video { background: #6dff99; }
+
+body.tfbloggers { background: #79c9d6; }
+
+body.ux { background: #BFABF9; }
 
 .storytime { background-color: #fff; padding: 20px; }
 
