add hide-post thing

--- a/css/_sass/_blog.css.scss
+++ b/css/_sass/_blog.css.scss
@@ -14,6 +14,10 @@
     }
   }
 }
+/* hide certain posts on main blog list */
+.blog-index .hide-post {
+  display:none;  
+}
 .post-preview {
   img {
     width:100%;
