--- a/css/_sass/_blog.css.scss
+++ b/css/_sass/_blog.css.scss
@@ -16,7 +16,7 @@
 }
 /* hide certain posts on main blog list */
 .blog-index .hide-post {
-  display:none;  
+  display:none;
 }
 .post-preview {
   img {
@@ -83,7 +83,10 @@
   background:#e4e4e4;
   float:left;
   width:100%;
-  padding:$pad;
+  padding:20px;
+  @include media-query (sm) {
+    padding:$pad;
+  }
   h2 {
     text-align:center;
     margin-bottom:30px;
@@ -92,7 +95,9 @@
     margin-bottom:$pad;
   }
   [class*='col-'] {
-    padding: 0 20px;
+    @include media-query (sm) {
+      padding: 0 20px;
+    }
   }
   .grid {
     @include media-query (lg) {
