--- a/css/_sass/_tag_links.css.scss
+++ b/css/_sass/_tag_links.css.scss
@@ -1,5 +1,8 @@
 ul.blog-tag-list {
-  margin: 0 0 60px;
+  margin: 0 0 30px;
+  @include media-query (sm) {
+    margin: 0 0 60px;
+  }
   padding:0;
   list-style-type:none;
   float:left;
