--- a/css/rw.css
+++ b/css/rw.css
@@ -1474,7 +1474,8 @@ a.pagination-item:hover { background-color: #f5f5f5; }
 *
 * Super small header above the content for site name and short description.
 */
-.masthead { padding-top: 1rem; padding-bottom: 1rem; margin-bottom: 3rem; }
+.masthead { padding-top: 1rem; padding-bottom: 1rem; margin-bottom: 1rem; }
+@media only screen and (min-width: 769px) { .masthead { margin-bottom: 3rem; } }
 
 .masthead-title { margin-top: 0; margin-bottom: 0; color: #505050; }
 
@@ -1696,10 +1697,11 @@ a.next-link { text-align: center; width: 100%; font-size: 18px; line-height: 2; 
 
 .read-more-link { font-weight: bold; }
 
-.related-strip { background: #e4e4e4; float: left; width: 100%; padding: 30px; }
+.related-strip { background: #e4e4e4; float: left; width: 100%; padding: 20px; }
+@media only screen and (min-width: 769px) { .related-strip { padding: 30px; } }
 .related-strip h2 { text-align: center; margin-bottom: 30px; }
 .related-strip .col-related { margin-bottom: 30px; }
-.related-strip [class*='col-'] { padding: 0 20px; }
+@media only screen and (min-width: 769px) { .related-strip [class*='col-'] { padding: 0 20px; } }
 @media only screen and (min-width: 1200px) { .related-strip .grid { max-width: 1400px; float: none; margin: 0 auto; } }
 
 .col-related h3 { margin: 0; font-size: 20px; }
@@ -1711,7 +1713,8 @@ a.next-link { text-align: center; width: 100%; font-size: 18px; line-height: 2; 
 .col-related .post-img-wrap .fitvids { margin: 0; }
 .col-related .post-img-wrap { display: block; width: 100%; float: left; }
 
-ul.blog-tag-list { margin: 0 0 60px; padding: 0; list-style-type: none; float: left; width: 100%; }
+ul.blog-tag-list { margin: 0 0 30px; padding: 0; list-style-type: none; float: left; width: 100%; }
+@media only screen and (min-width: 769px) { ul.blog-tag-list { margin: 0 0 60px; } }
 ul.blog-tag-list li { float: left; margin: 0; padding: 0; }
 ul.blog-tag-list a { display: block; float: left; background: #fff; padding: 3px 9px; margin: 0 5px 10px; }
 
